kuber-homeworks/1.5/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:       
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
          name: http-port
        - containerPort: 8443
          name: https-port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: multitool-backend
    protocol: TCP
    port: 80
    targetPort: 80
